<resources>
    <string name="app_name">L1OnlinePathshala</string>
    <string name="app_title">L1OP</string>
    <string name="app_code">l1op</string>

    <string name="welcome">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_fullname">FullName</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phoneNumber">Phone Number</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="reg_fullname">FullName</string>
    <string name="prompt_username">UserId</string>
    <string name="iit">IIT</string>
    <string name="pmt">PMT</string>
    <string name="sample_ques">Let X be the energy needed to raise the temperature of 5 moles of nitrogen held at constant pressure by one degree. Let Y be the energy needed to raise 5 moles of carbon monoxide by one degree with the pressure held constant. What is the ratio X:Y?</string>
    <string name="options_ans">Please choose an ans below:</string>
    <string name="btn_submit_ans">Submit</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="notificationMsg">You have a new question available today.</string>
    <string name="header_url">http://www.l1coaching.co.in</string>
    <string name="button_text_with_next">Submit &amp; Next</string>
    <string name="button_text_no_next">Submit</string>
    <string name="no_questions">You have successfully answered all the questions. Please visit tomorrow for new questions.</string>


    <!-- Screen Labels -->
    <string name="Lwelcome">Welcome</string>
    <string name="Lscore">Current score:</string>
    <string name="Lquestions">Question(s)</string>

    <!-- Toast Messages -->
    <string name="noAnsSelected">Please select an answer!!</string>
    <string name="ContactUs">Contact Us</string>
</resources>
