<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <!-- Footer Start -->
    <!-- Place footer next to header to set z-index property to minus value -->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_alignParentBottom="true"
        android:background="@layout/footer_repeat"
        android:orientation="vertical">

    </LinearLayout>
    <!-- Footer Ends -->

    <!-- Person Details -->
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Welcome"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/Lwelcome"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/username_readOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/Welcome"
                android:layout_toRightOf="@+id/Welcome"
                android:textAlignment="center"
                android:textColor="@color/abc_primary_text_material_light"
                android:textSize="@dimen/abc_text_size_display_1_material"
                android:textStyle="bold" />
        </TableRow>
        <!-- Blank Line Seperator -->
        <!-- Score Details -->
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip">

            <TextView
                android:id="@+id/score"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/Lscore"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/scoreResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:textAlignment="center"
                android:textColor="@color/abc_search_url_text_normal"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/questionHeaderLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/Lquestions"
            android:textColor="#ff000000"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ff101eff" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/viewmanager"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionHeaderLayout"
        android:layout_above="@+id/footer">

        <TextView
            android:id="@+id/noquestions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:singleLine="false"
            android:text="@string/no_questions"
            android:textColor="#ff2f44ff"
            android:textStyle="bold" />

        <android.support.v4.view.ViewPager
            android:id="@+id/questionviewpager"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        </android.support.v4.view.ViewPager>

    </FrameLayout>
</RelativeLayout>
